<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/nav_group_menu" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tuner"
            android:icon="@drawable/ic_logo"
            android:title="@string/tuner"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
    </group>

    <group android:id="@+id/nav_group_about">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_person"
            android:title="@string/about"/>
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_free_breakfast"
            android:title="@string/buy_me_coffee"
            android:visible="false"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share"/>
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star"
            android:title="@string/rate_review"/>
    </group>

</menu>