<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/vBg"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/about_bg"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/vAuthor"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@id/vBg"
        android:layout_marginTop="-50dp"
        android:layout_centerHorizontal="true"
        android:padding="3dp"
        android:scaleType="centerCrop"
        android:background="@drawable/bg_circle"
        android:backgroundTint="@color/colorPrimaryDark"
        app:srcCompat="@drawable/about_author"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/vClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:background="?actionBarItemBackground"
        app:srcCompat="@drawable/ic_close"
        app:tint="@android:color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vAuthor"
        android:scrollbars="none">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adriel_cafe"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/colorAccent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_developer"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/hi_there_are_you_enjoying_the_app"
                android:textSize="14sp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/vWebsite"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:background="?actionBarItemBackground"
                    app:srcCompat="@drawable/ic_website"
                    android:tint="?android:textColorPrimary"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/vEmail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:background="?actionBarItemBackground"
                    app:srcCompat="@drawable/ic_email"
                    android:tint="?android:textColorPrimary"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/vGitHub"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:background="?actionBarItemBackground"
                    app:srcCompat="@drawable/ic_github"
                    android:tint="?android:textColorPrimary"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/vLinkedIn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:background="?actionBarItemBackground"
                    app:srcCompat="@drawable/ic_linkedin"
                    android:tint="?android:textColorPrimary"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/this_app_is_open_source"
                android:textSize="14sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/vProjectRepo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/adrielcafe_chromaandroidapp"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:maxLines="1"
                android:ellipsize="end"
                android:drawablePadding="10dp"
                android:background="@drawable/bg_outline_white_ripple"
                tools:drawableStart="@drawable/ic_github"
                tools:drawableTint="?android:textColorPrimary"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorAccent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/vAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</RelativeLayout>